--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ node_modules/
 
 
 production
-/build
+/build/
 
 
 misc
@@ -18,3 +18,4 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+persistence.xml
