--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 before_script: cd Backend
 
+language: java
+
 before_install:
-  - npm config set spin false
+  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 
 script:
-  - npm test
-  - npm run build
+  - mvn test -B
+  - mvn verify
 
 deploy:
   provider: pages
