--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
-before_script: cd Backend
-
 language: java
 
 before_install:
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 
 script:
+  - cd Backend
   - mvn test -B
   - mvn verify
 
