--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,12 @@ yarn-error.log*
 
 persistence.xml
 /Backend/nbproject/
+
+### NetBeans ###
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
+nbactions.xml
