--- a/react-web/public/manifest.json
+++ b/react-web/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Biglers Biler",
+  "name": "Biglers Biler carrental",
   "icons": [
     {
       "src": "favicon.ico",
